refactor: implement all id and crud operations for Hashes without requiring id Sets